# pg_ai_extension

./: CMakeLists.txt  Makefile  README.md  pg_ai_ext--1.0.0.sql  pg_ai_ext.control
src/: ai_bridge.cpp  pg_ai_ext.c
